fixed desktop scrollbars, custom scroll color works on touch

--- a/pages/detail/detail.css
+++ b/pages/detail/detail.css
@@ -4,10 +4,15 @@
 }
 
 .flip-container {
-    overflow:scroll;
-    -ms-content-zooming: zoom;
+    overflow-y:scroll;
+    overflow-x:hidden;
     height:calc(100% - 0px);
     width:100%;
+}
+
+.touch .flip-container {
+     overflow:scroll;
+    -ms-content-zooming: zoom;
 }
 
 .flip-container > figcaption {
